--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --progress --colors"
   },
   "author": "Gustavo Mazzoni",
-  "main": "js/main.js",
+  "main": "app/main.js",
   "dependencies": {
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
