--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Coding Challenge VTEX",
   "scripts": {
-    "start": "webpack-dev-server --hot --progress --colors",
+    "start": "node server.js",
     "build": "webpack --progress --colors"
   },
   "author": "Gustavo Mazzoni",
@@ -11,12 +11,14 @@
   "dependencies": {
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "express": "^4.13.4",
+    "github": "^0.2.4",
+    "mongoose": "^4.4.5",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   },
   "devDependencies": {
     "babel-loader": "^6.2.3",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^1.12.14"
   }
 }
