--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Coding Challenge VTEX",
   "scripts": {
-    "start": "npm run build && node server.js",
-    "build": "webpack --progress --colors"
+    "start": "node server.js",
+    "build": "webpack --progress --colors",
+    "postinstall": "webpack --progress --colors"
   },
   "author": "Gustavo Mazzoni",
   "main": "app/main.js",
