--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "github": "^0.2.4",
     "mongoose": "^4.4.5",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
-  },
-  "devDependencies": {
+    "react-dom": "^0.14.7",
     "babel-loader": "^6.2.3",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14" 
   }
 }
