--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "author": "Gustavo Mazzoni",
   "main": "app/main.js",
   "dependencies": {
+    "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "github": "^0.2.4",
     "mongoose": "^4.4.5",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "babel-loader": "^6.2.3",
-    "webpack": "^1.12.14" 
+    "react-router": "^2.0.0",
+    "webpack": "^1.12.14"
   }
 }
